--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="./src/assets/icon.ico" type="image/x-icon">
     <!--收藏夹显示图标-->
     <link rel="shortcut icon" href="./src/assets/icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+    <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
