--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Dendoink</title>
+    <title>jszhai</title>
     <link rel="icon" href="./src/assets/icon.ico" type="image/x-icon">
     <!--收藏夹显示图标-->
     <link rel="shortcut icon" href="./src/assets/icon.ico" type="image/x-icon">
