--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <title>Dendoink</title>
+    <title>Smalltimoo</title>
     <link rel="icon" href="./src/assets/icon.ico" type="image/x-icon" />
     <!-- 收藏夹显示图标 -->
     <link
@@ -18,5 +18,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- 不蒜子计数 -->
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<!-- 不蒜子计数 -->
   </body>
 </html>
